add - svg - add Search update - Btn

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,3 +9,9 @@
   justify-content: space-around;
   align-items: center;
 }
+
+.svgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
