--- a/src/styles/__colors.scss
+++ b/src/styles/__colors.scss
@@ -1,10 +1,13 @@
 :root {
-  --color-primary: #5048e5;
+  --color-primary: #6e67ea;
   --color-secondary: #e5c648;
   --color-danger: #e54848;
   --color-accent: #ec4899;
   --color-bg: #000000;
   --color-text: #f0f0f0;
+  --color-grey-10: #818181;
+  --color-grey-20: #5b5b5b;
   --color-grey-30: #424242;
+  --color-grey-40: #2c2c2c;
   --color-grey-50: #1c1c1c;
 }
