--- a/src/components/AsideNav/AsideNav.module.scss
+++ b/src/components/AsideNav/AsideNav.module.scss
@@ -9,14 +9,30 @@
 
 .logo {
   width: 100%;
-  height: 100px;
+  height: 200px;
   position: relative;
 
-  & img{
+  & img {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
+    width: 50%;
+  }
+}
+
+.catalog {
+  list-style-type: none;
+}
+
+.catalogItem {
+  margin: 20px 0px;
+  font-weight: bold;
+  color: var(--color-text);
+  cursor: pointer;
+  transition: all 0.1s;
+  &:hover {
+    color: var(--color-primary);
+    filter: brightness(1.15);
   }
 }
