--- a/src/components/UIkit/Btn/Btn.module.scss
+++ b/src/components/UIkit/Btn/Btn.module.scss
@@ -11,7 +11,22 @@
   color: var(--color-text);
   font-weight: 600;
   transition: all 0.2s;
-  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
+.notification::before {
+  content: attr(data-notification);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  position: absolute;
+  top: -7px;
+  right: -7px;
+  width: 20px;
+  height: 20px;
+  background-color: var(--color-primary);
+  border-radius: 50%;
 }
 
 .primary {
@@ -28,26 +43,33 @@
 }
 .clear {
   background-color: rgba(0, 0, 0, 0);
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+}
+
+.sizeSmall {
+  font-size: 12px;
+  padding: 0px 10px;
+  height: 36px;
+  min-width: 36px;
+}
+.sizeMiddle {
+  font-size: 16px;
+  padding: 0px 14px;
+  height: 44px;
+  min-width: 44px;
+}
+.sizeBig {
+  font-size: 18px;
+  padding: 0px 30px;
+  height: 50px;
+  min-width: 50px;
 }
 
 .active {
   cursor: pointer;
-  position: relative;
-  &::after {
-    content: "";
-    background-color: rgb(255, 255, 255);
-    opacity: 0.2;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: -100%;
-    top: 0;
-    transition: all 0.3s;
-  }
-  &:hover::after {
-    content: "";
-    left: 0;
-    top: 0;
+  &:hover {
     filter: brightness(1.15);
   }
 }
