--- a/src/styles/__colors.scss
+++ b/src/styles/__colors.scss
@@ -1,6 +1,6 @@
 :root {
   --color-primary: #6e67ea;
-  --color-secondary: #e5c648;
+  --color-secondary: #c0a332;
   --color-danger: #e54848;
   --color-accent: #ec4899;
   --color-bg: #000000;
