--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,5 @@
+@import "../src/styles/_breakpoints";
+
 body {
   background-color: var(--color-bg);
   color: white;
@@ -6,8 +8,12 @@ body {
 .root {
   margin: 30px auto;
   display: grid;
-  grid-template-columns: 20% 80%;
   box-sizing: border-box;
-  width: 1380px;
+  max-width: 1380px;
   height: 100vh;
+  grid-template-columns: 280px auto;
+
+  @media screen and (max-width: $mobile) {
+    grid-template-columns: auto;
+  }
 }
