--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   padding: 20px;
+  box-sizing: border-box;
   background-color: var(--color-grey-50);
   border-radius: 15px;
   margin-bottom: 20px;
