--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -1,23 +1,37 @@
 .root {
   color: var(--color-text);
-  display: flex;
-  justify-content: end;
-  align-items: center;
+  display: grid;
+  grid-template-rows: 60% 40%;
   flex-direction: column;
   background-color: var(--color-grey-50);
   border-radius: 20px;
-  padding: 30px;
-  height: 320px;
+  height: 450px;
+  position: relative;
+  overflow: hidden;
+}
+
+.imgContainer {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0 0 0 7px black;
 }
 
 .img {
   transition: all 1s;
+  width: 90%;
+
   &:hover {
     transform: scale(1.03);
   }
 }
 
 .infoContainer {
+  padding: 10px 20px;
   display: flex;
   justify-content: start;
   flex-direction: column;
@@ -29,14 +43,18 @@
   font-size: 18px;
   text-decoration: none;
   margin: 10px 0px;
+  white-space: normal;
+  word-break: break-word;
 
   & a {
     color: var(--color-text);
     text-decoration: none;
     position: relative;
+
     &:hover::after {
       width: 100%;
     }
+
     &::after {
       content: "";
       transition: all 0.2s;
@@ -53,10 +71,39 @@
 .desc {
   font-size: 12px;
   opacity: 0.7;
-  margin: 10px 0px 15px;
+  width: 80%;
+  white-space: normal;
+  word-break: break-word;
 }
 
-.discount {
+.priceAndBtn {
+  position: absolute;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.priceContainer {
+  position: relative;
+}
+
+.discountPrice {
+  gap: 5px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  position: absolute;
+  top: -29px;
+}
+
+.priceWithoutDiscount {
+  font-size: 12px;
   position: relative;
   color: var(--color-grey-10);
 
@@ -66,38 +113,21 @@
     height: 1px;
     position: absolute;
     left: 0;
-    top: 60%;
+    top: 50%;
     background-color: (var(--color-grey-10));
     border-bottom: 1px solid var(--color-grey-50);
   }
-
-  &::before {
-    content: attr(data-content);
-    position: absolute;
-    left: 50px;
-    color: (var(--color-text));
-    opacity: 1;
-    white-space: nowrap;
-  }
 }
 
-.priceAndBtn {
+.discountLabel {
+  font-size: 10px;
+  height: 10px;
+  background-color: var(--color-primary);
+  color: white;
+  padding: 4px 8px;
+  border-radius: 12px;
+  font-weight: 600;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.price {
-  position: relative;
-  &::after {
-    content: attr(data-content);
-    width: 100%;
-    height: 10px;
-    color: var(--color-danger);
-    position: absolute;
-    left: 0;
-    top: 100%;
-  }
 }
