--- a/src/components/UIkit/Search/Search.module.scss
+++ b/src/components/UIkit/Search/Search.module.scss
@@ -1,6 +1,6 @@
 .root {
-  width: 100%;
-  max-width: 400px;
+  min-width: 300px;
+  max-width: 600px;
   position: relative;
   display: flex;
   align-items: center;
