--- a/src/components/ProductList/ProductList.module.scss
+++ b/src/components/ProductList/ProductList.module.scss
@@ -4,20 +4,20 @@
   margin-top: 20px;
   max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   width: 100%;
+  grid-template-columns: 1fr;
 
-  @media screen and (max-width: $desktop) {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  @media screen and (max-width: $tablet) {
+  @include tablet-sm {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  @media screen and (max-width: $mobile) {
-    grid-template-columns: 1fr;
+  @include desktop {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @include desktop-lg {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
@@ -66,7 +66,7 @@
   color: var(--color-grey-10);
   font-size: 35px;
   font-weight: bold;
-  height: 100%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
