--- a/src/components/UIkit/Search/Search.module.scss
+++ b/src/components/UIkit/Search/Search.module.scss
@@ -1,6 +1,6 @@
 .root {
-  min-width: 300px;
-  max-width: 600px;
+  min-width: 150px;
+  width: 500px;
   position: relative;
   display: flex;
   align-items: center;
