--- a/src/components/AsideNav/AsideNav.module.scss
+++ b/src/components/AsideNav/AsideNav.module.scss
@@ -10,7 +10,7 @@
   bottom: 20px;
   top: 20px;
   height: calc(100vh - 40px);
-  padding: 35px;
+  // padding: 35px;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -26,13 +26,14 @@
   width: 100%;
   height: 150px;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 35px 0px;
 
   & img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50%;
+    height: 100%;
   }
 }
 
@@ -43,16 +44,21 @@
 }
 
 .catalogItem {
-  padding: 15px 0px;
+  padding: 15px 35px;
   font-weight: bold;
   color: var(--color-text);
   cursor: pointer;
   transition: all 0.1s;
-  border-bottom: 1px solid var(--color-grey-10);
 
   & > * {
     color: var(--color-text);
     text-decoration: none;
+  }
+
+  &.active {
+    color: var(--color-primary);
+    background-color: var(--color-grey-40);
+    padding: 15px 45px;
   }
 
   &.active > * {
@@ -60,8 +66,8 @@
   }
 
   &:hover {
-    color: var(--color-primary);
-    filter: brightness(1.15);
+    padding: 15px 45px;
+    background-color: var(--color-grey-40);
   }
 }
 
