--- a/src/pages/ProductList/ProductList.module.scss
+++ b/src/pages/ProductList/ProductList.module.scss
@@ -1,7 +1,6 @@
 @import "../../styles/__breakpoints.scss";
 
 .root {
-  margin-top: 20px;
   max-width: 100%;
   display: grid;
   gap: 20px;
@@ -26,7 +25,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  margin: 20px 0;
+  margin-bottom: 20px;
   padding: 15px 20px;
   background-color: var(--color-grey-50);
   border-radius: 15px;
