--- a/src/pages/ProductList/ProductList.module.scss
+++ b/src/pages/ProductList/ProductList.module.scss
@@ -65,7 +65,7 @@
   color: var(--color-grey-10);
   font-size: 35px;
   font-weight: bold;
-  height: 50%;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
