--- a/src/pages/ProductPage/ProductPage.module.scss
+++ b/src/pages/ProductPage/ProductPage.module.scss
@@ -1,5 +1,5 @@
 .root {
-  margin: 40px 0px;
+  // margin: 40px 0px;
   padding: 0 !important;
   width: 100%;
 }
@@ -177,7 +177,7 @@
 @media (max-width: 1024px) {
   .root {
     padding: 0 16px;
-    margin: 30px auto;
+    // margin: 30px auto;
   }
 
   .product {
@@ -199,13 +199,13 @@
 @media (max-width: 768px) {
   .root {
     padding: 0 12px;
-    margin: 20px auto;
+    // margin: 20px auto;
   }
 
   .product {
     grid-template-columns: 1fr;
     gap: 20px;
-    margin: 20px 0px;
+    // margin: 20px 0px;
   }
 
   .productInfo {
